--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-__pycache__/
+__pycache__
 wsgi.cpython-38.pycurls.cpython-38.pycsettings.cpython-38.pyc__init__.cpython-38.pyc
 views.cpython-38.pycurls.cpython-38.pycmodels.cpython-38.pycadmin.cpython-38.pycapps.cpython-38.pyc__init__.cpython-38.pyc
+*.pyc
+.DS_STORE
+
