adding django nose, production deployment issue

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,29 @@
-appdirs==1.4.4
-appnope==0.1.0
 asgiref==3.2.10
-backcall==0.1.0
-certifi==2020.4.5.1
-chardet==3.0.4
-colorzero==1.1
+attrs==20.2.0
+certifi==2020.6.20
+coverage==5.3
 cycler==0.10.0
-decorator==4.4.2
-Django==3.1.1
+Django==3.1.2
+django-nose==1.4.7
 feedparser==6.0.1
-gpiozero==1.5.1
-guizero==1.1.0
 gunicorn==20.0.4
-idna==2.9
-ipykernel==5.2.1
-ipython==7.14.0
-ipython-genutils==0.2.0
-jedi==0.17.0
-jupyter-client==6.1.3
-jupyter-core==4.6.3
+iniconfig==1.1.1
 kiwisolver==1.2.0
-matplotlib==2.2.2
+matplotlib==3.3.2
 mysqlclient==2.0.1
-nudatus==0.0.4
-numpy==1.18.4
-parso==0.7.0
-pexpect==4.8.0
-pickleshare==0.7.5
-pigpio==1.46
-Pillow==7.1.2
-prompt-toolkit==3.0.5
-ptyprocess==0.6.0
-pycodestyle==2.4.0
-pyflakes==2.0.0
-Pygments==2.6.1
-PyInputPlus==0.2.9
+nose==1.3.7
+numpy==1.19.2
+packaging==20.4
+Pillow==8.0.1
+pluggy==0.13.1
+py==1.9.0
 pyparsing==2.4.7
-pyperclip==1.8.0
-PyQt5==5.14.1
-PyQt5-sip==12.7.2
-PyQtChart==5.14.0
-pyserial==3.4
-PySimpleValidate==0.2.10
+pytest==6.1.1
+pytest-cov==2.10.1
 python-dateutil==2.8.1
 pytz==2020.1
-pyzmq==19.0.1
-QScintilla==2.11.4
-qtconsole==4.3.1
-requests==2.23.0
-semver==2.10.1
 sgmllib3k==1.0.0
-six==1.14.0
-sqlparse==0.3.1
-stdiomask==0.0.5
-tornado==6.0.4
-traitlets==4.3.3
-urllib3==1.25.9
-wcwidth==0.1.9
+six==1.15.0
+sqlparse==0.4.1
+toml==0.10.1
 whitenoise==5.2.0
